<resources>
    <string name="app_name">Mostawsaf</string>
    <string name="splashappname">Mostawsaf</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="patient">Patient</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="doctor">Doctor</string>
    <string name="dontHaveaccount">Don\'t have an Account? Create new.</string>
    <string name="registernow">Register Now</string>
    <string name="updatenow">Update Now</string>
    <string name="doctordetail">Doctor Detail</string>
    <string name="update">Update</string>
    <string name="booknow">Book Now</string>
    <string name="choosedate">Choose Date</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="phonewithno">Phone (3331234567)</string>
    <string name="question_contactus">Please Enter Any Question or Query Here</string>
    <string name="verifyotp">Verify OTP</string>
    <string name="wejustsendyouaconformationcode">We just send you a conformation code</string>
    <string name="otptexttwo">Shortly to your number.Enter Below:</string>
    <string name="verifycode">Verify Code</string>
    <string name="signup">Sign Up</string>
    <string name="title_activity_home_screen_patient">HomeScreenPatientActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="send">Submit</string>

    <string name="menu_home">Home</string>
    <string name="menu_bookings">Bookings</string>
    <string name="menu_consultation">Consultations</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="menu_share">Share</string>
    <string name="menu_approved">Approved</string>
    <string name="submitted_successfully">Submitted Successfully</string>
    <string name="ok">Ok</string>
    <string name="menu_logout">Logout</string>
    <string name="Appointment">Appointment</string>
    <string name="consultationOnline">Consult Online</string>
    <string name="hospitaldetail">Hospital Detail</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_activity_home_screen_doctor">HomeScreenDoctorActivity</string>
    <string name="checked">Checked</string>
    <string name="cancelled">Cancelled</string>
    <string name="choosetime">Choose Time</string>
    <string name="time">"Time: "</string>
    <string name="date">"Date: "</string>
    <string name="reason">Enter Reason</string>
    <string name="here">Here..</string>
    <string name="submit">Submit</string>
    <string name="search_hintt">Search Here...</string>
    <string name="name">"Name: "</string>
    <string name="city">"City: "</string>
    <string name="phone_noo">"Phone No: "</string>
    <string name="specility">"Speciality: "</string>
    <string name="fee">"Fee: "</string>
    <string name="available_days">Available Days:</string>
    <string name="ChangeLanguage">Change Language</string>
    <string name="English">English</string>
    <string name="Arabic">Arabic</string>
    <string name="FindDoctors">Find Doctors</string>
    <string name="Doctorss">Doctors</string>
    <string name="FindConsultant">Find Consultant</string>
    <string name="Consultantss">Consultants</string>
    <string name="FindHospital">Find Hospital</string>
    <string name="Hospitalss">Hospitals</string>
    <string name="FindDonors">Find Donors</string>
    <string name="TodayAppointments">Today Appointments</string>
    <string name="TodayConsultations">Today Consultations</string>
    <string name="Appointmentss"> Appointments</string>
    <string name="Consultationss"> Consultations</string>
    <string name="agora_app_id">08e7e70d88664309a65c34324443599a</string>
    <string name="google_id_gso">794400688993-20emcaudlnedj6kqipijgfb876edtvi9.apps.googleusercontent.com</string>
    <string name="facebook_app_id">514439249196977</string>
    <string name="fb_login_protocol_scheme">fb514439249196977</string>
    <!-- Fragments Values-->

    <string name="fPending">Pending</string>
    <string name="fCompleted">Completed</string>
    <string name="fApproved">Approved</string>
    <string name="fRequests">Requests</string>
    <string name="Status">Status</string>
    <string name="phone_no_format">+(Country Code)(No)</string>
    <string name="next">Next</string>
    <string name="Today">Today</string>
    <string name="notavailable">Not Available</string>
    <string name="Approve">Approve</string>
    <string name="emergencyhelp">Emergency Help</string>
    <string name="emergency">Emergency</string>
    <string name="contactnow">Contact Now</string>
    <string name="FindHelp">Find Help</string>
    <string name="menu_messages">Messages</string>
    <string name="title_activity_messages">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
