<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/ic_bookings"
            android:title="@string/menu_bookings" />

        <item
            android:id="@+id/nav_consultation"
            android:icon="@drawable/ic_consultation"
            android:title="@string/menu_consultation" />
        <item
            android:id="@+id/nav_emergency"
            android:icon="@drawable/ic_consultation"
            android:title="@string/emergency" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_email"
            android:title="@string/menu_messages" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/menu_contactus" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_new"
            android:title="@string/menu_logout" />
    </group>

</menu>
