<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="8dp"
   >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:text="@string/reason"
        android:textColor="@color/blue"
        android:fontFamily="@font/poppins_regular"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </TextView>
    <EditText
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/here"
        android:fontFamily="@font/poppins_regular"
        android:id="@+id/cancel_dialouge_text">
    </EditText>

    <Button
        android:layout_marginTop="15dp"
        android:id="@+id/cancel_dialouge_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:background="@drawable/buttonshape"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="10dp">
    </Button>
</LinearLayout>
</androidx.cardview.widget.CardView>