<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Patient.ConsultDoctorActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMain"
        android:paddingTop="24dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/signup_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/AppTheme.Toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp">

                <ImageView
                    android:id="@+id/consultdoctor_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/ic_keyboard_arrow_left_white_24dp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="225dp"
                    android:background="@color/colorMain"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/consultdoctor_profileimage"
                        android:layout_width="120dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/add_profile">

                    </de.hdodenhof.circleimageview.CircleImageView>


                    <View
                        android:layout_width="80dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="16dp"
                        android:background="#FFFFFF" />
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="-64dp"
                    android:layout_marginRight="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true"
                    app:contentPadding="16dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="15dp"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/doctordetail"
                            android:textAlignment="center"
                            android:textColor="@color/blue"
                            android:textSize="22sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/name"
                            android:textColor="@color/blue"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/consultdoctor_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/specility"
                            android:textColor="@color/blue"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/consultdoctor_speciality"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textAlignment="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/fee"
                            android:textColor="@color/blue"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/consultdoctor_fee"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Fee Here"
                            android:textAlignment="center" />

                        <RadioGroup
                            android:id="@+id/consultdoctor_radioGroup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="8dp"
                            android:orientation="horizontal"
                            android:visibility="gone"
                            android:weightSum="2">

                            <RadioButton
                                android:id="@+id/consultdoctor_rbConsultOnline"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/consultationOnline"
                                android:textColor="@color/colorOrange"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <RadioButton
                                android:id="@+id/consultdoctor_rbDoctor"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="center"

                                android:text="@string/Appointment"
                                android:textColor="@color/colorOrange"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </RadioGroup>

                        <Spinner
                            android:id="@+id/consultdoctor_spinnerhospital"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:padding="20dp"
                            android:visibility="gone"></Spinner>

                        <LinearLayout
                            android:id="@+id/consultdoctor_availabledaysetc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_regular"
                                android:text="@string/available_days"
                                android:textColor="@color/blue"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/consultdoctor_days"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textAlignment="center" />

                            <Button
                                android:id="@+id/consultdoctor_choosedate"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginHorizontal="30dp"
                                android:layout_marginTop="10dp"

                                android:layout_marginBottom="10dp"
                                android:background="@drawable/buttonshape"
                                android:fontFamily="@font/poppins_regular"
                                android:text="@string/choosedate"
                                android:textAllCaps="false"
                                android:textColor="#ffffff"
                                android:textSize="18sp" />

                            <Button
                                android:id="@+id/consultdoctor_choosetime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"

                                android:layout_marginHorizontal="30dp"
                                android:layout_marginTop="10dp"
                                android:layout_marginBottom="10dp"
                                android:background="@drawable/buttonshape"
                                android:fontFamily="@font/poppins_regular"
                                android:text="@string/choosetime"
                                android:textAllCaps="false"
                                android:textColor="#ffffff"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/consultdoctor_Booknow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/buttonshape"
                    android:text="@string/booknow"
                    android:textAllCaps="false"
                    android:textColor="#ffffff"
                    android:textSize="24sp"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/consultdoctor_spin_kit"
            style="@style/SpinKitView.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            app:SpinKit_Color="@color/colorPrimaryDark" />
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>